# yang

./: CMakeLists.txt  README.md  yang.pro
src/: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
src/core/: CMakeLists.txt  Column.cpp  Column.h  Crossword.cpp  Crossword.h  Row.cpp  Row.h  Size.cpp  Size.h
src/parsers/: CMakeLists.txt  NonogramsCrosswordGalleryParser.cpp  NonogramsCrosswordGalleryParser.h  NonogramsParser.cpp  NonogramsParser.h
src/resources/: CMakeLists.txt  Nonogram.qml  NonogramsGallery.qml  main.qml  qml.qrc
src/ui/: Application.cpp  Application.h  CMakeLists.txt  CrosswordModel.cpp  CrosswordModel.h
test/: CMakeLists.txt  TestGumbo.cpp  TestNonogramsParser.cpp  config.h.in
test/data/: 6309.html
